--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=uniqlo
-DB_USERNAME=quangtrung
-DB_PASSWORD=0352393384tQt
+DB_DATABASE=test
+DB_USERNAME=YoungBirds
+DB_PASSWORD=admin
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
