--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=uniqlo
-DB_USERNAME=root
-DB_PASSWORD=null
+DB_USERNAME=YoungBirds
+DB_PASSWORD=admin
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
